# libvcatd

./: .gitattributes  .gitignore  AndroidManifest.xml  CLAUDE.md  README.md  build.gradle  buildAndPublish.sh  settings.gradle
app/: build.gradle
app/src/main/cpp/: CMakeLists.txt  dav1d_jni.cc  vvdec_jni.cc
app/src/main/java/com/roncatech/libvcat/: Dav1dAv1Provider.java  Dav1dAv1RendererProvider.java  Dav1dDecoder.java  Dav1dDecoderException.java  Dav1dLibrary.java  Dav1dOutputBuffer.java  Dav1dVideoRenderer.java  NativeDav1d.java
app/src/main/java/com/roncatech/libvcat/dav1d/: Dav1dAv1Provider.java  Dav1dAv1RendererProvider.java  Dav1dDecoder.java  Dav1dDecoderException.java  Dav1dLibrary.java  Dav1dOutputBuffer.java  Dav1dVideoRenderer.java  NativeDav1d.java  VcatDav1dPlugin.java
app/src/main/java/com/roncatech/libvcat/decoder/: InternalDecoderLoader.java  NonStdDecoderStsdParser.java  VcatDecoderManager.java  VcatDecoderPlugin.java  VideoConfiguration.java
app/src/main/java/com/roncatech/libvcat/extractor/mp4/: Atom.java  AtomParsers.java  DefaultSampleValues.java  FixedSampleSizeRechunker.java  FragmentedMp4Extractor.java  MetadataUtil.java  PsshAtomUtil.java  SefReader.java  Sniffer.java  TrackFragment.java  TrackSampleTable.java  VcatMp4Extractor.java
app/src/main/java/com/roncatech/libvcat/extractor3/mp4/: AtomSizeTooSmallSniffFailure.java  BoxParser.java  DefaultSampleValues.java  FixedSampleSizeRechunker.java  IncorrectFragmentationSniffFailure.java  MetadataUtil.java  MimeTypeResolver.java  NoDeclaredBrandSniffFailure.java  PsshAtomUtil.java  SefReader.java  SmtaAtomUtil.java  Sniffer.java  Track.java  TrackEncryptionBox.java  TrackSampleTable.java  UnsupportedBrandsSniffFailure.java  VcatMp4Extractor3.java  package-info.java
app/src/main/java/com/roncatech/libvcat/vvdec/: NativeVvdec.java  VcatVvcdecPlugin.java  VvcNalUnitUtil.java  VvcVideoCfgParser.java  VvdecDecoder.java  VvdecLibrary.java  VvdecOutputBuffer.java  VvdecProvider.java  VvdecRendererProvider.java  VvdecVideoRenderer.java
app/src/test/java/com/roncatech/libvcat/vvdec/: VvcVideoCfgParserTest.java
